client/signup/steps/design-type-with-store/style.scss
.design-type-with-store {
	position: relative;
}

.design-type-with-store__section-wrapper {
	opacity: 1;
	filter: blur( 0 );
	transform: translateZ( 0 ) translateX( 0 );
	transition: 0.5s ease-in-out opacity, 0.5s ease-in-out filter, 0.5s ease-in-out transform;

	&.is-hidden {
		pointer-events: none;
		transform: translateZ( 0 ) translateX( -25% );
		opacity: 0;
	}
}

.design-type-with-store__store-wrapper {
	position: absolute;
	width: 100%;

	opacity: 1;
	filter: blur( 0 );
	transform: translateZ( 0 ) translateX( 0 );
	transition: 0.5s ease-in-out opacity, 0.5s ease-in-out filter, 0.5s ease-in-out transform;

	&.is-hidden {
		pointer-events: none;
		transform: translateZ( 0 ) translateX( 25% );
		opacity: 0;
	}
}

.design-type-with-store__list {
	margin: 0 auto;
	display: flex;
	flex-flow: row wrap;
	max-width: 640px;
}

.design-type-with-store__choice {
	padding: 0;
	margin: 0 10px 20px 10px;
	width: 230px;
	flex-grow: 1;
	transition: all 100ms ease-in-out;

	a, svg {
		display: block;
		width: 100%; // Safari fix
	}

	h2 {
		color: darken( $gray, 20% );
		padding-left: 15px;
		border-top: 1px solid transparentize( lighten( $gray, 20% ), .5 );
		line-height: 54px;
	}

	&:hover {
		box-shadow: 0 0 0 1px $gray, 0 2px 4px lighten( $gray, 20 );
	}
}

.design-type-with-store__container {
	display: flex;
	flex-flow: row wrap;
	max-width: 572px;
	margin: 0 auto;
	border: 1px solid #c8d7e1;
}

.design-type-with-store__copy {
	padding: 32px;
	background-color: white;
	font-size: 15px;
	font-weight: 400;
	line-height: 1.4;
	color: #3d596d;
	max-width: 402px;
	box-sizing: border-box;
}

.design-type-with-store__form {
	flex-grow: 1;
	margin: 0;
	padding: 32px 24px;
	text-align: center;
	background-color: #f3f6f8;
	box-sizing: border-box;
}

.design-type-with-store__price-text {
	display: block;
	height: 14px;
	margin-bottom: 3px;
	font-size: 12px;
	font-weight: 400;
	text-align: center;
	color: #668eaa;
}

.design-type-with-store__price {
	display: block;
	height: 29px;
	font-size: 24px;
	text-align: center;
	color: #4ab866;
	margin-bottom: 20px;
}

.design-type-with-store__price b {
	font-weight: 700;
}

.design-type-with-store__form-submit {
	float: none;
	margin: 0;
	width: 120px;
	height: 40px;
	white-space: nowrap;
}

.design-type-with-store__back-button-wrapper {
	text-align: center;
	margin: 32px;
}

.design-type-with-store__logo {
	display: block;
	margin-bottom: 18px;
}

